--- a/alcohol.html
+++ b/alcohol.html
@@ -228,78 +228,75 @@
                                                                 <label class="custom-control-label" for="customSwitch1">New and fresh things</label>
                                                               </div>
                                                             </div>
-                                                                      <div class="col-12 col-md-9 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-6 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/armenia spitak gini.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <h5 class="card-text"><a href="">'Armenia' spitak anapak gini</a><h5p>
-                                                                              <p class="card-text text-warning"> 3590 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                                      
+                                                                      <div class="row">
+                                                                        <div class="card col-6 col-md-3 border p-2 mx-auto mt-4">
+                                                                          <img src="img/armenia spitak gini.jpg" class="car d-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <h5 class="card-text"><a href="">'Armenia' spitak anapak gini</a><h5p>
+                                                                            <p class="card-text text-warning"> 3590 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/armenia karmir.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/armenia karmir.jpg" class="card-img-center img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">'Armenia' karmir kisaqaxcr gini 750ml</a></h5>
                                                                             <p class="card-text  text-warning"> 3460 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/armenia anapak.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/armenia anapak.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">'Armenia' karmir anapak gini </a></h5>
                                                                             <p class="card-text  text-warning"> 3500 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/arax.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/arax.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Rusakan arax 'Belaya Berezka' </a></h5>
                                                                             <p class="card-text  text-warning"> 4400 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/arax gold.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/arax gold.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Rusakan arax 'Belaya Berezka' Gold</a></h5>
                                                                             <p class="card-text  text-warning"> 5200 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/vodka.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                            <img src="img/vodka.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href=""> Arax 'Skyy' 40% 1l</a></h5>
                                                                               <p class="card-text  text-warning">7500 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/ararat.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/ararat.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Yntir' 7 tarekan</a></h5>
                                                                               <p class="card-text  text-warning"> 24000 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/ararat1.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/ararat1.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Vaspurakan' 15 tarekan 0.7l  </a></h5>
                                                                               <p class="card-text  text-warning"> 28800 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/ararat2.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/ararat2.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Nairi' 20 tarekan</a></h5>
                                                                               <p class="card-text  text-warning"> 41760 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
