--- a/bread.html
+++ b/bread.html
@@ -245,110 +245,107 @@
                                                               </div>
                                                               
                                                             </div>
-                                                                      <div class="col-12 col-md-9 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-12 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/matnakash 200.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <p class="card-text"><a href="product.html"class="text-danger">Matnakash</a></p>
-                                                                              <p class="card-text text-warning">200 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                
+                                                                      <div class="row">
+                                                                        <div class="card col-6  col-md-3 border p-2 mx-auto mt-4 ">
+                                                                          <img src="img/matnakash 200.jpg" class="car d-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <p class="card-text"><a href="product.html" class="text-danger">Matnakash</a></p>
+                                                                            <p class="card-text text-warning">200 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/hrazdan 200.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/hrazdan 200.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Hrazdan</a></p>
                                                                             <p class="card-text  text-warning">200 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/cev hac.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3" >
+                                                                          <img src="img/cev hac.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">sev hac</a></p>
                                                                             <p class="card-text  text-warning">240 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/romashka.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/romashka.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac'Romashka'</a></p>
                                                                             <p class="card-text  text-warning">130 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/baton.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/baton.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">baton</a></p>
                                                                             <p class="card-text  text-warning">110 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/lavash.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/lavash.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">lavash</a></p>
                                                                             <p class="card-text  text-warning">1 hat-100 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/caxik.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/caxik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="">hac 'Caxik'</a></p>
                                                                             <p class="card-text  text-warning">140 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/buxanka.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/buxanka.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Buxanka'</a></p>
                                                                             <p class="card-text  text-warning">200 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/matnakash 170.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/matnakash 170.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Matnakash</a></p>
                                                                             <p class="card-text  text-warning">170 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/somin.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/somin.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Somin' (sev)</a></p>
                                                                             <p class="card-text  text-warning">180 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/nmush-2.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/nmush-2.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">hac 'Stolichni' ktratac</a></p>
                                                                             <p class="card-text  text-warning">230 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/rjanoy.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/rjanoy.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Rzhanoy'</a></p>
                                                                             <p class="card-text  text-warning">240 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/sevani hac.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6">
+                                                                          <img src="img/sevani hac.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Sevani sev hac</a></p>
                                                                             <p class="card-text  text-warning">250 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
