--- a/cream.html
+++ b/cream.html
@@ -228,54 +228,51 @@
                                                                 <label class="custom-control-label" for="customSwitch1">New and fresh things</label>
                                                               </div>
                                                             </div>
-                                                                      <div class="col-12 col-md-9 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-12 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/ttvaser.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <h5 class="card-text"><a href="">Ttvaser 'Marianna'18% 180g</a><h5p>
-                                                                              <p class="card-text text-warning"> 300 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                                      
+                                                                      <div class="row">
+                                                                        <div class="card col-6 col-sm-6 col-md-4 border p-2 mx-auto mt-4">
+                                                                          <img src="img/ttvaser.jpg" class="car d-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <h5 class="card-text"><a href="">Ttvaser 'Marianna'18% 180g</a><h5p>
+                                                                            <p class="card-text text-warning"> 300 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/ttvaser 400.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/ttvaser 400.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Marianna'18% 400g</a></h5>
                                                                             <p class="card-text  text-warning">  500 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/chanax t.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/chanax t.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Chanax'</a></h5>
                                                                             <p class="card-text  text-warning"> 460 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/ttvaser a.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/ttvaser a.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Ashtarak Kat'18% 400g </a></h5>
                                                                             <p class="card-text  text-warning"> 470 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                            <img src="img/ttvaser kovik.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                            <img src="img/ttvaser kovik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Ttvaser 'Ashtarak Kat Kovik' 13% 400g</a></h5>
                                                                               <p class="card-text  text-warning"> 430 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-12 col-md" style="width: 18rem;">
-                                                                            <img src="img/ttvaser b.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-4" >
+                                                                            <img src="img/ttvaser b.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Ttvaser 'Biokat' 20% 400g</a></h5>
                                                                               <p class="card-text  text-warning"> 530 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
