--- a/sausage.html
+++ b/sausage.html
@@ -229,22 +229,19 @@
                                                               </div>
                                                             </div>
                                                             
-                                                                      <div class="col-12 col-md-6 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-12 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/bacon.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <h5 class="card-text"><a href="">Ershik 'Bekon'</a><h5p>
-                                                                              <p class="card-text text-warning">  600 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                                      
+                                                                      <div class="row">
+                                                                        <div class="card col-6 col-md-3 border p-2 mx-auto mt-4">
+                                                                          <img src="img/bacon.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <h5 class="card-text"><a href="">Ershik 'Bekon'</a><h5p>
+                                                                            <p class="card-text text-warning">  600 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/basturma.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/basturma.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Basturma</a></h5>
                                                                             <p class="card-text  text-warning">0.25kg- 2600 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
@@ -256,9 +253,9 @@
                                                                               </div>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/ershik.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/ershik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Ershik 'Bekon Peperoni'</a></h5>
                                                                             <p class="card-text  text-warning">1kg- 890 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
@@ -270,33 +267,33 @@
                                                                               </div>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/nrbershik.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/nrbershik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">nrbershik 'Bekon'</a></h5>
                                                                             <p class="card-text  text-warning">1kg- 900 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/ershik bsh.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/ershik bsh.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ershik 'Atenq' bzhshkakan</a></h5>
                                                                             <p class="card-text  text-warning"> 1 kg - 800 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3"-3style="width: 18rem;">
-                                                                            <img src="img/sosiski bacon.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                            <img src="img/sosiski bacon.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Nrbershik 'Bekon'</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 1000 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3"-3style="width: 18rem;">
-                                                                            <img src="img/epac ershik.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/epac ershik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Epac ershik Gyumri 'Atenq'</a></h5>
                                                                               <p class="card-text  text-warning">1kg - 1200 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
@@ -308,9 +305,9 @@
                                                                               </div>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3"-3style="width: 18rem;">
-                                                                            <img src="img/basturma bacon.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/basturma bacon.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Basturma 'Bekon'</a></h5>
                                                                               <p class="card-text  text-warning"> 0.25kg - 2700dram (1kg-10800 dram)</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
@@ -322,9 +319,9 @@
                                                                               </div>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3"-3style="width: 18rem;">
-                                                                            <img src="img/germanakan ershik.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/germanakan ershik.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Ershik 'Atenq' germanakan,epac</a></h5>
                                                                               <p class="card-text  text-warning"> 750 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
