--- a/cakes.html
+++ b/cakes.html
@@ -228,54 +228,51 @@
                                                                 <label class="custom-control-label" for="customSwitch1">New and fresh things</label>
                                                               </div>
                                                             </div>
-                                                                      <div class="col-12 col-md-9 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-12 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/Elakov tort.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <h5 class="card-text"><a href="">Elakov tort</a><h5p>
-                                                                              <p class="card-text text-warning"> 2800 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                              
+                                                                      <div class="row">
+                                                                        <div class="card col-6 col-sm-6 col-md-4 border p-2 mx-auto mt-4 ">
+                                                                          <img src="img/Elakov tort.jpg" class="car d-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <h5 class="card-text"><a href="">Elakov tort</a><h5p>
+                                                                            <p class="card-text text-warning"> 2800 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/tort j.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/tort j.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Zheleyov tort</a></h5>
                                                                             <p class="card-text  text-warning"> 2000 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/shaxmat.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/shaxmat.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Tort 'Shaxmat'</a></h5>
                                                                             <p class="card-text  text-warning"> 4000 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/jpit.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/jpit.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Tort 'Negri Zhpit'</a></h5>
                                                                             <p class="card-text  text-warning"> 3500 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md" style="width: 18rem;">
-                                                                          <img src="img/tort.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                          <img src="img/tort.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Limonov Tort</a></h5>
                                                                             <p class="card-text  text-warning"> 3300 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-12 col-md" style="width: 18rem;">
-                                                                            <img src="img/bulkiner.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-4">
+                                                                            <img src="img/bulkiner.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Katnashorov bulkiner</a></h5>
                                                                               <p class="card-text  text-warning">1hat - 200 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
