--- a/drinks.html
+++ b/drinks.html
@@ -228,78 +228,75 @@
                                                                 <label class="custom-control-label" for="customSwitch1">New and fresh things</label>
                                                               </div>
                                                             </div>
-                                                                      <div class="col-12 col-md-9 main border-right border-left w-100">
-                                                                        <div class="row justify-content-center">
-                                                                          <div class="card col-12 col-sm-12 col-md-12 border p-2 mx-auto mt-4 bg-dark">
-                                                                            <img src="img/cola 2.jpg" class="car d-img-top" alt="...">
-                                                                            <div class="card-body">
-                                                                              <h5 class="card-text"><a href="">Gazavorvac xmichq 'Coca Cola' 2l</a><h5p>
-                                                                              <p class="card-text text-warning"> 630 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
-                                                                            </div>
+                                                                    
+                                                                      <div class="row">
+                                                                        <div class="card col-6 col-md-3 border p-2 mx-auto mt-4">
+                                                                          <img src="img/cola 2.jpg" class="car d-img-top img-fluid" alt="...">
+                                                                          <div class="card-body">
+                                                                            <h5 class="card-text"><a href="">Gazavorvac xmichq 'Coca Cola' 2l</a><h5p>
+                                                                            <p class="card-text text-warning"> 630 dram</p>
+                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                      </div>
-                                                                      <div class="row bg-dark">
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/cola 1.5.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3" >
+                                                                          <img src="img/cola 1.5.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Coca Cola' 1.5l</a></h5>
                                                                             <p class="card-text  text-warning"> 520 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/cola 1.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/cola 1.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Coca Cola' 1l</a></h5>
                                                                             <p class="card-text  text-warning">420 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/fanta 1.5.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3" >
+                                                                          <img src="img/fanta 1.5.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Fanta' 1.5l </a></h5>
                                                                             <p class="card-text  text-warning"> 500 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                          <img src="img/fanta 1.jpg" class="card-img-top" alt="...">
-                                                                          <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                          <img src="img/fanta 1.jpg" class="card-img-top img-fluid" alt="...">
+                                                                          <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Fanta' citrusayin miqsov 1l</a></h5>
                                                                             <p class="card-text  text-warning"> 470 dram</p>
                                                                             <a href="#" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
-                                                                        <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/nataxtari 1.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                        <div class="card col-6 col-md-3">
+                                                                            <img src="img/nataxtari 1.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Gazavorvac xmichq 'Nataxtari' tandzi,xaghoghi,tarxuni hamov ev qaxcr 1l</a></h5>
                                                                               <p class="card-text  text-warning">Cankacacy- 420 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/sprite 1.5.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/sprite 1.5.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Gazavorvac xmichq 'Sprite' 1.5l</a></h5>
                                                                               <p class="card-text  text-warning"> 550 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/jermuk 1.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/jermuk 1.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Hanqayin jur 'Jermuk' 1l</a></h5>
                                                                               <p class="card-text  text-warning"> 400 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
-                                                                          <div class="card col-6 col-md-3" style="width: 18rem;">
-                                                                            <img src="img/jermuk limon.jpg" class="card-img-top" alt="...">
-                                                                            <div class="card-body d-flex flex-column justify-content-end bg-dark">
+                                                                          <div class="card col-6 col-md-3">
+                                                                            <img src="img/jermuk limon.jpg" class="card-img-top img-fluid" alt="...">
+                                                                            <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Hanqayin jur 'Jermuk' limoni hamov 1l</a></h5>
                                                                               <p class="card-text  text-warning"> 440 dram</p>
                                                                               <a href="#" class="btn btn-primary">Add to cart</a>
