--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                  New Products
                               </div>
                                 <div class="row bg-dark">
-                                  <div class="card col-12 col-md-3" style="width: 18rem;">
+                                  <div class="card col-12 col-md-3">
                                     <img src="img/armenia spitak gini.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">'ARMENIA'spitak anapak gini</h5>
@@ -259,7 +259,7 @@
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
-                                  <div class="card col-12 col-md-3" style="width: 18rem; position: relative; ">
+                                  <div class="card col-12 col-md-3">
                                     <img src="img/nutella.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Shokolade krem pndukov 'Nutella' 750g</h5>
@@ -267,7 +267,7 @@
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
-                                  <div class="card col-12 col-md-3" style="width: 18rem; position: relative; ">
+                                  <div class="card col-12 col-md-3">
                                     <img src="img/atenq ershik.jpg" class="card-img-top" alt="...">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Ershik 'ATENQ'</h5>
@@ -275,8 +275,8 @@
                                       <a href="#" class="btn btn-primary">Buy</a>
                                     </div>
                                   </div>
-                                  <div class="card col-12 col-md-3" style="width: 18rem; position: relative; ">
-                                    <img src="img/tomat artfud.jpg" alt="">
+                                  <div class="card col-12 col-md-3">
+                                    <img src="img/tomat artfud.jpg" alt="" class="card-img-top">
                                     <div class="card-body d-flex flex-column justify-content-end">
                                       <h5 class="card-title">Tomati macuk 'ARTFOOD' 250g</h5>
                                       <p class="card-text">300 dram</p>
